# kernel

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
share/: grub.cfg
src/: lib.rs  pfa.rs  utils.rs
src/x86_64/: boot.rs  early_printk.rs  mod.rs  panic.rs
src/x86_64/boot/: Rules.mk  boot.S  boot64.S  kernel.ld
targets/: x86_64-unknown-none.json
